--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -196,10 +196,14 @@ header .header-top .description {
 }
 
 header .header-top h3 a {
-  font-size: 26px;
+  font-size: 23px;
   font-weight: 700;
   color: #164a9f;
   transition: all .5s ease-in;
+}
+
+header .header-top figure {
+  width: 150px;
 }
 
 header .nav {
@@ -214,7 +218,7 @@ header .nav .nav-list {
 }
 
 header .nav .nav-list li {
-  padding: 15px;
+  padding: 8px;
   transition: all .5s ease-in;
   border-radius: 5px;
 }
@@ -306,82 +310,6 @@ header .nav-active {
 
 /*==========HEADER END==========*/
 /*==========Main START==========*/
-main .sidenav-description {
-  position: fixed;
-  top: 0;
-  left: -300px;
-  width: 300px;
-  height: 100%;
-  z-index: 1000;
-  box-shadow: 5px 7px 10px rgba(0, 0, 0, 0.5);
-  background-color: #063146;
-  color: #333;
-  transition: all .5s ease-in;
-  overflow: scroll;
-}
-
-main .sidenav-description h1 {
-  font-size: 24px;
-  text-align: center;
-  line-height: 50px;
-  padding: 15px;
-  color: white;
-}
-
-main .sidenav-description ul li span {
-  position: absolute;
-  right: 10px;
-  transition: all .5s ease-in;
-}
-
-main .sidenav-description ul li:hover {
-  background-color: rgba(22, 74, 159, 0.2);
-}
-
-main .sidenav-description ul a {
-  display: block;
-  height: 100%;
-  width: 100%;
-  line-height: 50px;
-  font-size: 20px;
-  color: white;
-  padding-left: 15px;
-  box-sizing: border-box;
-  border-top: 1px solid #164a9f;
-  border-bottom: 1px solid #164a9f;
-  transition: all .5s ease-in;
-  text-decoration: none;
-}
-
-main .sidenav-description ul ul {
-  background-color: #063146;
-  width: 300px;
-}
-
-main .sidenav-description ul ul li {
-  background-color: #054768;
-  margin-left: 5px;
-}
-
-main .sidenav-description ul ul li a {
-  font-size: 15px;
-  line-height: 30px;
-  padding: 10px;
-  text-decoration: none;
-}
-
-main .sidenav-description ul ul li:hover {
-  background-color: #062738;
-}
-
-main .sidenav .closebtn {
-  position: absolute;
-  top: 0;
-  right: 12px;
-  font-size: 36px;
-  margin-left: 50px;
-}
-
 main .information .post-description p {
   font-size: 16px;
   padding: 20px 0;
@@ -409,7 +337,8 @@ main .active {
 
 @media (min-width: 320px) and (max-width: 800px) {
   main .information .post-description p {
-    font-size: 14px;
+    font-size: 12px;
+    line-height: 15px;
   }
   main .information .services h2 {
     font-size: 18px;
