--- a/assets/scss/layout/_main.scss
+++ b/assets/scss/layout/_main.scss
@@ -1,105 +1,105 @@
 /*==========Main START==========*/
 main{
    
-    .sidenav{
+    // .sidenav{
         
-        &-description{
-            position: fixed;
-            top: 0;
-            left: -300px;
-            width: 300px;
-            height: 100%;
-            z-index: 1000;
-            box-shadow: 5px 7px 10px rgba(0, 0, 0,.5);
-            background-color: $sidebar-color;
-            color: $secondary;
-            transition: all .5s ease-in;
-            overflow: scroll;
+    //     &-description{
+    //         position: fixed;
+    //         top: 0;
+    //         left: -300px;
+    //         width: 300px;
+    //         height: 100%;
+    //         z-index: 1000;
+    //         box-shadow: 5px 7px 10px rgba(0, 0, 0,.5);
+    //         background-color: $sidebar-color;
+    //         color: $secondary;
+    //         transition: all .5s ease-in;
+    //         overflow: scroll;
            
     
-            h1{
-                font-size: 24px;
-                text-align: center;
-                line-height: 50px;
-                padding: 15px;
-                color: white;
+    //         h1{
+    //             font-size: 15px;
+    //             text-align: center;
+    //             line-height: 15px;
+    //             padding: 15px;
+    //             color: white;
     
-            }
+    //         }
     
           
-            ul{
+    //         ul{
                 
-                li{
-                     //  background-color: $primary-color;
-                     //  border-bottom: 1px solid;
-                    span{
-                       position: absolute;
-                       right: 10px;
-                       transition: all .5s ease-in;
+    //             li{
+    //                  //  background-color: $primary-color;
+    //                  //  border-bottom: 1px solid;
+    //                 span{
+    //                    position: absolute;
+    //                    right: 10px;
+    //                    transition: all .5s ease-in;
                       
-                    }
-                    &:hover{
-                        background-color: rgba(22,74,159 ,0.2);
-                    }
+    //                 }
+    //                 &:hover{
+    //                     background-color: rgba(22,74,159 ,0.2);
+    //                 }
                     
-                }
+    //             }
                
                
-                // li:hover a{
-                //     padding-left: 30px;
+    //             // li:hover a{
+    //             //     padding-left: 30px;
                     
-                // }
-                a{
-                    display: block;
-                    height: 100%;
-                    width: 100%;
-                    line-height: 50px;
-                    font-size: 20px;
-                    color: white;
-                    padding-left: 15px;
-                    box-sizing: border-box;
-                    border-top: 1px solid $primary-color;
-                    border-bottom: 1px solid $primary-color;
-                    transition: all .5s ease-in;
-                    text-decoration: none;
+    //             // }
+    //             a{
+    //                 display: block;
+    //                 height: 100%;
+    //                 width: 100%;
+    //                 line-height: 50px;
+    //                 font-size: 20px;
+    //                 color: white;
+    //                 padding-left: 15px;
+    //                 box-sizing: border-box;
+    //                 border-top: 1px solid $primary-color;
+    //                 border-bottom: 1px solid $primary-color;
+    //                 transition: all .5s ease-in;
+    //                 text-decoration: none;
 
                    
-                }
+    //             }
          
 
-                ul{
+    //             ul{
                     
-                    background-color:$sidebar-color;
-                    width: 300px;
-                    li{
-                        background-color: #054768;
-                        margin-left: 5px;
-                        a{
-                            font-size: 15px;
-                            line-height: 30px;
-                            padding: 10px;
-                            text-decoration: none;
+    //                 background-color:$sidebar-color;
+    //                 width: 300px;
+    //                 li{
+    //                     background-color: #054768;
+    //                     margin-left: 5px;
+    //                     a{
+    //                         font-size: 15px;
+    //                         line-height: 30px;
+    //                         padding: 10px;
+    //                         text-decoration: none;
                           
-                        }
-                        &:hover{
-                            background-color: #062738;
-                        }
+    //                     }
+    //                     &:hover{
+    //                         background-color: #062738;
+    //                     }
                       
-                    }
-                }
-            }
+    //                 }
+    //             }
+    //         }
             
-        }
+    //     }
 
        
-        .closebtn{
-            position: absolute;
-			top: 0;
-			right: 12px;
-			font-size: 36px;
-			margin-left: 50px;
-        }
-    }
+    //     .closebtn{
+    //         position: absolute;
+	// 		top: 0;
+	// 		right: 12px;
+	// 		font-size: 36px;
+	// 		margin-left: 50px;
+    //     }
+    // }
 
     .information{
       
@@ -143,7 +143,8 @@ main{
         .information{
             .post-description{
                 p{
-                    font-size: 14px;
+                    font-size: 12px;
+                    line-height: 15px;
                 }
             }
 
