--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -190,9 +190,10 @@ header .header-top {
 }
 
 header .header-top .description {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   margin-left: 50px;
-  margin-top: 20px;
-  align-items: center;
 }
 
 header .header-top h3 a {
@@ -203,7 +204,12 @@ header .header-top h3 a {
 }
 
 header .header-top figure {
-  width: 150px;
+  width: 130px;
+}
+
+header .header-top figure img {
+  width: 100%;
+  object-fit: cover;
 }
 
 header .nav {
@@ -242,7 +248,7 @@ header .nav .nav-list .closebtn {
 }
 
 header .nav .show {
-  font-size: 20px;
+  font-size: 15px;
   color: white;
 }
 
@@ -250,13 +256,15 @@ header .nav .show {
   display: none;
 }
 
-@media (max-width: 1048px) {
-  header .header-main ul a {
-    font-size: 12px;
-  }
-}
-
 @media (max-width: 909px) {
+  header .header-top figure {
+    width: 120px;
+    align-items: center;
+  }
+  header .header-top figure img {
+    width: 100%;
+    object-fit: cover;
+  }
   header .nav .show {
     display: block;
   }
@@ -279,15 +287,15 @@ header .nav .show {
     padding: 5px;
   }
   header .nav .nav-list li a {
-    font-size: 18px;
-    padding: 5px;
+    font-size: 16px;
+    padding: 3px;
   }
   header .nav .nav-list .closebtn {
     display: block;
     position: absolute;
     top: 10px;
     right: 40px;
-    font-size: 36px;
+    font-size: 25px;
     margin-left: 50px;
     color: white;
     text-decoration: none;
@@ -299,11 +307,26 @@ header .nav-active {
   right: 0;
 }
 
-@media (min-width: 800px) {
-  header .header-main ul li {
+@media (min-width: 300px) and (max-width: 900px) {
+  header .header-top .description h3 a {
+    font-size: 15px;
+  }
+  header .nav ul li {
     padding: 8px;
   }
-  header .header-main ul li a {
+  header .nav ul li a {
+    font-size: 15px;
+  }
+}
+
+@media (min-width: 800px) {
+  header .header-top .description h3 a {
+    font-size: 18px;
+  }
+  header .nav ul li {
+    padding: 8px;
+  }
+  header .nav ul li a {
     font-size: 15px;
   }
 }
@@ -311,8 +334,9 @@ header .nav-active {
 /*==========HEADER END==========*/
 /*==========Main START==========*/
 main .information .post-description p {
-  font-size: 16px;
+  font-size: 14px;
   padding: 20px 0;
+  line-height: 15px;
 }
 
 main .information .services {
@@ -335,13 +359,13 @@ main .active {
   left: 0;
 }
 
-@media (min-width: 320px) and (max-width: 800px) {
+@media (min-width: 300px) and (max-width: 800px) {
   main .information .post-description p {
     font-size: 12px;
     line-height: 15px;
   }
   main .information .services h2 {
-    font-size: 18px;
+    font-size: 17px;
   }
   main .information .services h5 a {
     font-size: 12px;
