--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -8,10 +8,11 @@ header {
 		
 
 		.description{
-			
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
 			margin-left: 50px;
-		    margin-top: 20px;
-			align-items: center;
+			
 		}
 			
 		
@@ -26,10 +27,12 @@ header {
 			
 		}
 		figure{
-			width: 150px;
+			width: 130px;
 			img{
-				
+				width: 100%;
+				object-fit: cover;
 			}
+			
 		}
 	}
 
@@ -73,7 +76,7 @@ header {
 		}
 	
 		.show{
-			font-size: 20px;
+			font-size: 15px;
 			color: white;
 		}
 		.show{
@@ -83,20 +86,75 @@ header {
 		}
 
 	}
-	@media (max-width: 1048px){
-		.header-main{
-			ul{
-				a{
-					font-size: 12px;
+	  // RESPONSIVE  DESIGN //
+	// @media (min-width: 1048px){
+	// 	.header-top{
+	// 		figure{
+	// 			width: 100px;
+	// 			align-items: center;
+	// 			// margin-right: 40px;
+	// 			img{
+	// 				width: 100%;
+	// 				object-fit: cover;
+	// 			}
+	// 		}
+	// 		h3{
+	// 			a{
+
+	// 			}
+	// 		}
+	// 	}
+	// 	.nav{
+	// 		ul{
+	// 			a{
+	// 				font-size: 12px;
+	// 			}
+	// 		}
+	// 	}
+	// }
+	// @media (min-width: 300px) and (max-width: 767px){
+	// 	.header-top{
+	// 		figure{
+	// 			width: 100px;
+	// 			align-items: center;
+	// 			// margin-right: 40px;
+	// 			img{
+	// 				width: 100%;
+	// 				object-fit: cover;
+	// 			}
+	// 		}
+	// 		.description{
+	// 			h3{
+	// 				a{
+	// 					font-size: 16px;
+	// 				}
+	// 			}
+	// 		}
+		
+	// 	}
+	// 	.nav{
+	// 		.nav-list{
+	// 			display: none;
+	// 		}
+			
+	// 	}
+	// }
+	@media (max-width: 909px){
+		.header-top{
+			figure{
+				width: 120px;
+				align-items: center;
+				// margin-right: 40px;
+				img{
+					width: 100%;
+					object-fit: cover;
 				}
 			}
 		}
-	}
-
-	@media (max-width: 909px){
 		.nav{
 			
 			.show{
+				
 				display: block;
 			}
 			.nav-list{
@@ -117,8 +175,8 @@ header {
 				li{
 					padding: 5px;
 					a{
-						font-size: 18px;
-						padding: 5px;
+						font-size: 16px;
+						padding: 3px;
 						// background-color: #042174;
 						// border-bottom: 3px solid ;
 					}
@@ -128,7 +186,7 @@ header {
 					position: absolute;
 					top: 10px;
 					right: 40px;
-					font-size: 36px;
+					font-size: 25px;
 					margin-left: 50px;
 					color: white;
 					text-decoration: none;
@@ -147,40 +205,45 @@ header {
 		right: 0;
 	}
 
-	// @media (min-width: 300px) and (max-width: 800px) {
-	// 	.header-top{
-	// 		h3{
+ 
+	@media (min-width: 300px) and (max-width: 900px) {
+		.header-top{
+			.description{
+				h3{
+					a{
+						 font-size: 15px;;
+					}
+				}
+			}
 			
-	// 			a{
-	// 				font-size: 20px;
-	// 				font-weight: 700;
-					
-	// 			}
-				
-	// 		}
-	// 	}
-	// 	.header-main{
-	// 		width: 100%;
-	// 		height: 100%;
-	// 		ul{
-	// 			display: block;
-	// 			flex-direction: column;
-	// 			justify-content: flex-start;
+		}
+		.nav{
+			ul{
+				li{
+					padding: 8px;
+					a{
+						font-size: 15px;
+					}
+				}
 			
-	// 			.active{
-	// 				display: none !important;
-	// 			}
-	// 		}
-	// 		.show{
-	// 			display: block;
-	// 		}
-	// 	}
+			}
+			
+		}
 		
-		
-	// }
+	}
 
 	@media (min-width: 800px){
-		.header-main{
+		.header-top{
+			.description{
+				h3{
+					a{
+						 font-size: 18px;;
+					}
+				}
+			}
+			
+		}
+		.nav{
 			ul{
 				li{
 					padding: 8px;
