--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -218,7 +218,7 @@ header .nav {
 
 header .nav .nav-list {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   margin-bottom: 0;
 }
