--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -40,7 +40,7 @@ header {
 		display: flex;
 		.nav-list{
 			display: flex;
-			justify-content: space-around;
+			justify-content: space-between;
 			align-items: center;
 			margin-bottom: 0;
 			li{
